# ecscpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  compile.bat  premake4.lua  rebuild.sh  runtests.sh
src/: CMakeLists.txt  Ufofrog.cpp  Ufofrog.h  stdinc.h
src/assetholder/: AssetHolder.h
src/component/: Component.cpp  Component.h  ComponentFlags.h  ComponentPools.h  RenderComponent.h
src/core/: ScreenManager.cpp  ScreenManager.h
src/core/assets/: LoadCallbacks.h
src/core/interface/: Game.h  Screen.cpp  Screen.h
src/core/util/: Locator.h
src/demo/shootgame/: ShootGame.cpp  ShootGame.h  main.cpp
src/demo/shootgame/component/: ComponentPools.h  Components.h  ComponentsDecl.h  RenderComponent.cpp  RenderComponent.h
src/demo/shootgame/entity/: EntityFactory.cpp  EntityGroup.h
src/demo/shootgame/physics/: Physics.cpp  Physics.h
src/demo/shootgame/screens/: GameScreen.cpp
src/demo/shootgame/system/: PhysicSystem.h  RenderingSystem.cpp  RenderingSystem.h
src/demo/testgame/: TestGame.cpp  main.cpp
src/demo/testgame/component/: ComponentFlags.h  PlayerComponent.cpp  RenderComponent.cpp
src/demo/testgame/screens/: GameScreen.cpp  GameScreen.h  SplashScreen.cpp
src/demo/testgame/system/: PlayerControllerSystem.h
src/ecs/entity/: Entity.h  EntityFactory.cpp
src/entity/: EntityManager.h  EntityObserver.h
src/game/shootgame/: Assets.h  ShootGame.cpp  ShootGame.h
src/game/shootgame/component/: CollideGroupComponent.h  ComponentFlags.h  ComponentPoolHolder.h  ComponentPools.h  Components.h  ComponentsDecl.h  PhysicComponent.cpp  PhysicComponent.h  PlayerComponent.h  RenderComponent.h  RigidBodyComponent.h  ShapeComponent.cpp  ShapeComponent.h  SpeedComponent.cpp  SpeedComponent.h
src/game/shootgame/entity/: EntityFactory.cpp  EntityFactory.h  GameWorld.h
src/game/shootgame/physics/: Physics.cpp  Physics.h  debugrender.cpp  debugrender.h
src/game/shootgame/screens/: GameScreen.cpp  GameScreen.h  SplashScreen.cpp
src/game/shootgame/system/: PhysicSystem.cpp  PlayerControllerSystem.h  (+2 more)
src/game/testgame/: TestGame.cpp  TestGame.h  Ufofrog.cpp  Ufofrog.h  main.cpp
src/gameworld/: GameWorld.h
src/lib/: Doxyfile
src/lib/core/: CoreCommon.h
src/screens/: GameScreen.cpp  SplashScreen.cpp  SplashScreen.h  TitleScreen.cpp  TitleScreen.h
src/system/: EntityProcessingSystem.cpp  EntityProcessingSystem.h  RenderingSystem.h  System.h
src/tests/: aspect_flags.cpp  entity_components.cpp  entity_eid.cpp  entity_general.cpp  system_flags.cpp  world_general.cpp
src/util/: Poolable.h  QuadTree.h  Singleton.h
(+69 files in other folders)
